Cleaned and corrected all Daos, adding projection and a more defined sort/filter declaration